css/qvitter.css
/* ... */
.queet-streams {
    bottom: 0;
    color: #999999;
    display:inline-block;
    font-size: 12px;
    font-weight: normal;
    margin: 3px 6px;
	}
.queet-streams a {
    text-decoration: none;
    cursor:pointer;
	}
.queet-streams a:hover {
    text-decoration: underline;
	}

#new-queets-bar-container {
	height:40px;
	overflow:hidden;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
	border-right-width: 1px;
	border-left-width: 1px;
	border-right-color: rgba(0, 0, 0, 0.1);
	border-left-color: rgba(0, 0, 0, 0.1);
	border-right-style: solid;
	border-left-style: solid;
	margin-top:-1px;
	}
#new-queets-bar-container.hidden {
	height:0;
	margin-top:0;
	}
#new-queets-bar {
    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05) inset;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.6);
    z-index: 2;
    background-color: #F5F5F5;
    border-bottom: 1px solid #DDDDDD;
    border-top: 1px solid #DDDDDD;
    cursor: pointer;
    display: block;
    font-size: 13px;
    font-weight: normal;
    padding: 10px 1px;
    position: relative;
    text-align: center;
    height:18px;
	}
#new-queets-bar:hover {
    background-color: #eee;
	}

.stream-item {
	font-family: "Helvetica Neue",​Arial,​sans-serif;
	font-size: 14px;
	color: #333333;
	line-height: 18px;
	background-color: #FFFFFF;
	background-image: none;
	background-repeat: repeat;
	background-position: 0% 0%;
	background-attachment: scroll;
	background-clip: padding-box;
	background-origin: padding-box;
	background-size: auto auto;
	border-right-width: 1px;
	border-left-width: 1px;
	border-right-color: rgba(0, 0, 0, 0.1);
	border-left-color: rgba(0, 0, 0, 0.1);
	border-right-style: solid;
	border-left-style: solid;
	list-style-image: none;
	list-style-position: outside;
	list-style-type: none;
    -webkit-transition: opacity 0.1s ease, height 0s linear, margin 0.05s linear;
    -moz-transition: opacity 0.1s ease, height 0s linear, margin 0.05s linear;
    -o-transition: opacity 0.1s ease, height 0s linear, margin 0.05s linear;
    transition: opacity 0.1s ease, height 0s linear, margin 0.05s linear;
    height:auto;
    position:relative;
	}
.stream-item.collapsing {
	overflow:hidden;
	}
.stream-item.hidden {
	display:none;
	}
.stream-item.expanded > div.last-visible,
.stream-item.expanded > div.last-visible .queet,
.stream-item.expanded > div.last-visible .inline-reply-queetbox {
    border-radius: 0 0 6px 6px;
    }
.stream-item.conversation {
	background-color:#F6F6F6;
	border:0 none;
	border-top:1px solid #F6F6F6;
	opacity:0.5;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
	}
.stream-item.conversation > .queet {
	background-color:#F6F6F6;
	}
.stream-item.conversation.visible {
	opacity:1;
	}
.stream-item.conversation.hidden-conversation {
	display:none;
	overflow:hidden;
	}
.stream-item.conversation .queet:hover {
	background-color:#F6F6F6;
	}

.stream-item.notification .not-seen {
	position:absolute;
	left:-5px;
	top:50%;
	margin-top:-5px;
	width:10px;
	height:10px;
	border-radius:6px;
	z-index:10;
	}

.stream-item.notification.follow .queet,
.stream-item.notification.repeat .queet,
.stream-item.notification.like .queet {
	min-height:37px;
	cursor:default;
	}
.stream-item.notification.follow .queet .queet-content,
.stream-item.notification.repeat .queet .queet-content,
.stream-item.notification.like .queet .queet-content {
	cursor:default;
	}
.stream-item.notification.follow:hover,
.stream-item.notification.repeat:hover,
.stream-item.notification.like:hover {
	background-color:#fff;
	}
.stream-item.notification.follow a.account-group img.avatar,
.stream-item.notification.repeat a.account-group img.avatar,
.stream-item.notification.like a.account-group img.avatar {
	width:24px;
	height:24px;
	left:36px;
	top:4px;
	}
.stream-item.notification.repeat .dogear,
.stream-item.notification.like .dogear {
background-repeat: no-repeat;
    height: 24px;
    position: absolute;
    right: 0;
    top: 0;
    width: 24px;
    display: block;
    height: 24px;
    left: 36px;
    top: 7px;
    width: 24px;
    z-index: 10;
	}
.stream-item.notification.like .dogear {
    background-position: -115px -1075px;
	}
.stream-item.notification.repeat .dogear {
    background-position: -70px -1072px;
	}
.stream-item.notification .small-grey-notice,
.stream-item.notification .small-grey-notice a {
	color:#999;
	}
.stream-item.notification .small-grey-notice a:hover {
	color:#333;
	text-decoration:underline;
	}
.stream-item.notification .stream-item-header {
	color:#333;
	}

.stream-item.selected-by-keyboard::before {
	border-width: 3px;
	border-style: solid;
    content: "";
    display: block;
    height: calc(100% - 4px);
    margin-left: -3px;
	margin-top:-3px;
    position: absolute;
    width: 100%;
	opacity:0.7;
	}
.stream-item.expanded.selected-by-keyboard::before {
	height:100%;
	}

.show-full-conversation {
    bottom: 3px;
    color: #777;
    font-family: "Helvetica Neue",Arial,sans-serif;
    font-size: 12px;
    line-height: 12px;
    position: absolute;
    right: 0;
	}
.show-full-conversation:hover {
	text-decoration:underline;
	}
.queet {
	font-family: "Helvetica Neue",​Arial,​sans-serif;
	font-size: 14px;
	color: #333333;
	line-height: 18px;
	position: relative;
	cursor: pointer;
	list-style-image: none;
	list-style-position: outside;
	list-style-type: none;
	min-height: 85px;
	}
.stream-item.user .queet {
	cursor: auto;
	}
.stream-item:not(.expanded):hover {
	background-color:#f5f5f5;
	}
.stream-item .queet {
	border-bottom:1px solid #ddd;
	}
.stream-item.conversation .queet {
	border-bottom:1px solid #ddd;
	}
.stream-item.conversation:last-child .queet {
	border-bottom:0 none;
	}
.stream-item.expanded:not(.conversation) > .queet {
	border-bottom:0 none;
	}
.stream-item.expanded > div:last-child .inline-reply-queetbox {
	border-bottom:0 none;
	}
/* ... */

